fix: trying to fix the navbar overlap on table

--- a/CSS/Kgk2btTablesS21.css
+++ b/CSS/Kgk2btTablesS21.css
@@ -91,5 +91,5 @@ h4 {
 body {
     background-color: black;
     font-family: 'Tajawal', sans-serif;
-    margin-top: 5em;
+    padding-top: 5em;
 }
